# OfflineHomesteadAI

./: .cursorrules  .gitignore  CHANGELOG.md  CONFIG_README.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  README.md  config.dev.toml  config.prod.toml  config.toml  dev_workflow.sh  ontology.yml  ontologyV1.yml  ontology_v2.yml  ontology_v3.yml  safetensors_migration.md
.cargo/: config.toml
.github/workflows/: ci.yml
apps/localdb-cli/: Cargo.toml  config.dev.toml  config.test.toml  config.toml
crates/: README.md
crates/localdb-core/: Cargo.toml  README.md
crates/localdb-core/src/: config.rs  data_processor.rs  error.rs  lib.rs  traits.rs  types.rs
crates/localdb-core/tests/: core_tests.rs
crates/localdb-embed/: Cargo.toml  README.md
crates/localdb-embed/examples/: embed.rs
crates/localdb-embed/src/: device.rs  lib.rs  pool.rs  tokenize.rs
crates/localdb-embed/tests/: embed_tests.rs  pool_tests.rs
crates/localdb-hybrid/: Cargo.toml  README.md
crates/localdb-hybrid/src/: lib.rs
crates/localdb-text/: Cargo.toml  README.md
crates/localdb-text/examples/: index.rs  search.rs
crates/localdb-text/src/: index.rs  lib.rs  search.rs  tantivy_utils.rs
crates/localdb-text/tests/: full_flow.rs
crates/localdb-vector/: Cargo.toml  README.md
crates/localdb-vector/examples/: backfill.rs  init_chunks.rs  status.rs  train_build.rs
crates/localdb-vector/src/: cache.rs  embed_backfill.rs  index_build.rs  lib.rs  schema.rs  search.rs  table.rs  writer.rs
crates/localdb-vector/src/embed_provider/: local.rs  mod.rs
crates/localdb-vector/tests/: full_flow.rs  pipeline_tests.rs
docs/: architecture.md
elt/: README.md  pyproject.toml
elt/config/: settings.py
elt/src/: __init__.py  cli.py
elt/src/extractors/: __init__.py  docx_extractor.py  pdf_extractor.py
elt/src/loaders/: tantivy_loader.py
elt/src/processors/: __init__.py  chunker.py  tokenizer.py
etl/: README.md  load.py  pyproject.toml
etl/config/: __init__.py  dev.yaml  etl_config.yaml  prod.yaml  settings.py  test.yaml
etl/src/: __init__.py  cli.py  pdf_processor.py
etl/src/extractors/: __init__.py  docx_extractor.py  image_extractor.py  pdf_extractor.py
etl/src/loaders/: __init__.py  lancedb_loader.py  tantivy_loader.py
etl/src/processors/: __init__.py  chunker.py  embedder.py  tokenizer.py
etl/tests/: FORMAT_STATUS.md  README.md  run_tests.sh  run_text_cleaning_tests.py  test_text_cleaning.py
scripts/: run_elt_pipeline.sh  run_etl_pipeline.sh  run_search.sh  run_test_etl.sh  setup.sh  setup_env.sh  test_format_support.py
search/: Cargo.toml  config.dev.toml  config.prod.toml  config.toml  rust-toolchain.toml
search/scripts/: strict-check.sh
search/src/: config.rs  data_processor.rs  embedding.rs  facet_mapping.rs  interactive_search.rs  lance_search.rs  lance_utils.rs  lancedb_demo.rs  lancedb_indexer.rs  lancedb_production_example.rs  lib.rs  main.rs  search_only.rs  search_tests.rs  tantivy_search.rs  tantivy_utils.rs
search/tests/: config_integration_tests.rs  config_test_runner.rs
src/: config.rs  facet_mapping.rs  lancedb_demo.rs  main.rs  search_tests.rs
tests/: config_integration_tests.rs
