[package]
name = "tantivy-lancedb-hybrid-search"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A production-ready hybrid search system combining Tantivy (text search) with LanceDB (vector search)"
license = "MIT"
repository = "https://github.com/yourusername/tantivy-lancedb-hybrid-search"
homepage = "https://github.com/yourusername/tantivy-lancedb-hybrid-search"
documentation = "https://docs.rs/tantivy-lancedb-hybrid-search"
keywords = ["search", "tantivy", "lancedb", "vector-search", "text-search", "hybrid-search"]
categories = ["search", "text-processing", "data-structures"]
default-run = "lancedb_production_example"

[lib]
name = "tantivy_demo"
path = "src/lib.rs"

[[bin]]
name = "search_tests"
path = "src/search_tests.rs"

[[bin]]
name = "facet_mapping"
path = "src/facet_mapping.rs"

[[bin]]
name = "lancedb_demo"
path = "src/lancedb_demo.rs"

[[bin]]
name = "lancedb_production_example"
path = "src/lancedb_production_example.rs"


[dependencies]
tantivy = "0.24"
walkdir = "2.5"
rand = "0.8"
rand_chacha = "0.3"
bytemuck = "1.16"
twox-hash = "1.6"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"