[workspace]
members = [
  "crates/localdb-core",
  "crates/localdb-text",
  "crates/localdb-embed",
  "crates/localdb-vector",
  "crates/localdb-hybrid",
  "apps/localdb-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.lints.clippy]
all = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[workspace.metadata]
localdb = { enforce_fmt = true, enforce_clippy = true }

