[package]
name = "tantivy-lancedb-hybrid-search"
version = "0.1.0"
edition = "2021"

authors = ["Your Name <your.email@example.com>"]
description = "A production-ready hybrid search system combining Tantivy (text search) with LanceDB (vector search)"
license = "MIT"
repository = "https://github.com/yourusername/tantivy-lancedb-hybrid-search"
homepage = "https://github.com/yourusername/tantivy-lancedb-hybrid-search"
documentation = "https://docs.rs/tantivy-lancedb-hybrid-search"
keywords = ["search", "tantivy", "lancedb", "vector-search", "text-search", "hybrid-search"]
categories = ["search", "text-processing", "data-structures"]

[lib]
name = "tantivy_demo"
path = "src/lib.rs"

[[bin]]
name = "tantivy-lancedb-hybrid-search"
path = "src/main.rs"

[[bin]]
name = "search_only"
path = "src/search_only.rs"

[[bin]]
name = "tantivy_search"
path = "src/tantivy_search.rs"

[[bin]]
name = "lance_search"
path = "src/lance_search.rs"

[dependencies]
tantivy = "0.24"
walkdir = "2.5"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
figment = { version = "0.10", features = ["env", "toml"] }
serde_json = "1.0"
lancedb = "0.22"
arrow-array = "55.0"
arrow-schema = "55.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
twox-hash = "1.6"
tempfile = "3.0"
tokenizers = "0.15"
candle-core = { version = "0.9", features = ["metal"] }
candle-nn = { version = "0.9", features = ["metal"] }
candle-transformers = { version = "0.9", features = ["metal"] }
indicatif = "0.17"