[package]
name = "localdb-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
localdb-core = { path = "../../crates/localdb-core" }
localdb-text = { path = "../../crates/localdb-text" }
localdb-embed = { path = "../../crates/localdb-embed" }
localdb-vector = { path = "../../crates/localdb-vector" }
localdb-hybrid = { path = "../../crates/localdb-hybrid" }
walkdir = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[bin]]
name = "localdb-cli"
path = "src/bin/main.rs"
