[package]
name = "localdb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
figment = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
shellexpand = "3.1"

[dev-dependencies]
tempfile = { workspace = true }
