[package]
name = "localdb-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokenizers = { version = "~0.15" }
candle-core = { version = "~0.9" }
candle-nn = { version = "~0.9" }
candle-transformers = { version = "~0.9" }
twox-hash = "1.6"
serde_json = "1.0"
localdb-core = { path = "../localdb-core" }

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cpu = []

