[package]
name = "localdb-embed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
twox-hash = { workspace = true }
serde_json = { workspace = true }
localdb-core = { path = "../localdb-core" }

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cpu = []
