[package]
name = "localdb-vector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
indicatif = { workspace = true }
# Minimize transitive deps: disable default (cloud) features
lancedb = { version = "~0.22", default-features = false }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
localdb-core = { path = "../localdb-core" }
tempfile = "3.0"
walkdir = "2.5"

[dev-dependencies]
localdb-embed = { path = "../localdb-embed" }
